fix .project padding overflow

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ section {
 
 .project {
   list-style: none;
-  padding: 0;
+  padding: 0 2px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
